Edite la leyenda del formulario

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <section id="seccion14" class="section" data-scrollSpy>
                   <h2>Validaciones de formulario</h2>
                   <form class="formulario-contacto" action="https://formsubmit.co/bd156b73646ca6af2cb8e69f66d60e08" method="POST" target="_blank">
-                      <legend>Envíanos tus comentarios</legend>
+                      <legend>Envíame tus comentarios</legend>
                       <input type="text" name="nombre" placeholder="Escribe tu nombre" title="Nombre debe estar con letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
                       <input type="email" name="email" placeholder="Escribe tu email" title="Email incorrecto" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
                       <input type="text" name="asunto" placeholder="Asunto a tratar" title="El asunto es requerido" required>
